Added link to previous section

--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1506,7 +1506,7 @@ Note, if you don't see any objects, you may need to create some demo data. You'l
 
 :::
 
-### Execute transaction hook
+### Execute transaction hook {#execute-transaction-hook}
 
 In the frontend, you might need to execute a transaction block in multiple places, hence it's better to extract the transaction execution logic and reuse it everywhere. Let's create and examine the execute transaction hook.
 
