added missing file: `useGetLockedObject.ts`

--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1961,6 +1961,13 @@ This hook Fetches all the non-deleted system `Locked` objects from the API in a 
 
 This component uses tanstack's `useInfiniteQuery` instead of `useSuiClientInfiniteQuery` since the data is being fetched from the example's API rather than Sui. 
 
+<details>
+  <summary>
+    Add `src/hooks/useGetLockedObject.ts`
+  </summary>
+  {@inject: examples/trading/frontend/src/hooks/useGetLockedObject.ts}
+</details>
+
 :::danger[Checkpoint]
 
 Run your app and ensure you can:
