--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1,6 +1,7 @@
 ---
 title: Trustless Swap
-description: An app
+description: An app that performs atomic swaps on Sui. Atomic swaps are similar to escrows but without requiring a trusted third party.
+effort: medium
 ---
 
 This guide demonstrates how to make an app that performs atomic swaps on Sui. Atomic swaps are similar to escrows but without requiring a trusted third party.
@@ -37,7 +38,7 @@ Before getting started, make sure you have:
 
 In this part of the guide, you write the Move contracts that perform the trustless swaps. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
 
-### `Locked` and `Key`
+### Locked and Key
 
 After a trade is initiated, you don't want the trading party to modify the object they agreed to trade. Imagine you're trading in-game items and you agree to trade a weapon with all its attachments, and its owner strips all its attachments just before the trade.
 
@@ -51,20 +52,6 @@ To tamper with the object would require unlocking it, which consumes the key. Co
 
 {@inject: examples/trading/contracts/escrow/sources/lock.move#struct=Locked,Key noComments}
 
-```move
-use sui::object::{ID, UID};
-
-struct Locked<T: store> has key, store {
-    id: UID,
-    key: ID,
-    obj: T,
-}
-
-struct Key has key, store {
-    id: UID
-}
-```
-
 - The `Locked<T>` type stores the locked `obj`, the `ID` of the key that unlocks it, and its own `id`.
 - The corresponding `Key` type only stores its own `id`.
 
@@ -72,38 +59,10 @@ The lock and key are made single-use by the signatures of the `lock` and `unlock
 
 {@inject: examples/trading/contracts/escrow/sources/lock.move#fun=lock noComments}
 
-```move
-use sui::object;
-use sui::tx_context::TxContext;
-
-public fun lock<T: store>(obj: T, ctx: &mut TxContext): (Locked<T>, Key) {
-    let key = Key { id: object::new(ctx) };
-    let locked = Locked {
-        id: object::new(ctx),
-        key: object::id(&key),
-        obj,
-    };
-
-    (locked, key)
-}
-```
-
 The `unlock` function accepts the `Locked<T>` and `Key` by value (which consumes them), and returns the underlying `T` as long as the correct key has been supplied for the lock:
 
-```move
-/// The key does not match this lock.
-const ELockKeyMismatch: u64 = 0;
-
-public fun unlock<T: store>(locked: Locked<T>, key: Key): T {
-    assert!(locked.key == object::id(&key), ELockKeyMismatch);
-    let Key { id } = key;
-    object::delete(id);
-
-    let Locked { id, key: _, obj } = locked;
-    object::delete(id);
-    obj
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/lock.move#variable=ELockKeyMismatch noComments}
+{@inject: examples/trading/contracts/escrow/sources/lock.move#fun=unlock noTitle noComments}
 
 Together, they ensure that a lock and key cannot have existed before the lock operation, and will not exist after a successful unlock – it is single use.
 
@@ -114,7 +73,7 @@ Together, they ensure that a lock and key cannot have existed before the lock op
 
 :::
 
-### Testing `Locked` and `Key`
+### Testing Locked and Key
 
 Move's type system guarantees that a given `Key` cannot be re-used (because `unlock` accepts it by value), but there are some properties that need to be confirmed with tests:
 
@@ -125,17 +84,6 @@ The test starts with a helper function for creating an object, it doesn't matter
 
 {@inject: examples/trading/contracts/escrow/sources/lock.move#fun=test_coin noComments}
 
-```move
-#[test_only] use sui::coin::{Self, Coin};
-#[test_only] use sui::sui::SUI;
-#[test_only] use sui::test_scenario::{Self as ts, Scenario};
-
-#[test_only]
-fun test_coin(ts: &mut Scenario): Coin<SUI> {
-    coin::mint_for_testing<SUI>(42, ts::ctx(ts))
-}
-```
-
 - All test-related functions and imports are annotated with `#[test_only]` to make sure they don't show up in the published package. This can also be done by separating tests into their own module – e.g. `lock_tests.move` – and marking that module as `#[test_only]`.
 - The `test_scenario` module is used to provide access to a `&mut TxContext` in the test (necessary for creating new objects). Tests that don't need to simulate multiple transactions but still need access to a `TxContext` can use `sui::tx_context::dummy` to create a test context instead.
 
@@ -143,38 +91,12 @@ The first test works by creating an object to test, locking it and unlocking it 
 The last two lines exist to keep the Move compiler happy by cleaning up the test coin and test scenario objects, because values in Move will not be implicitly cleaned up unless they have the `drop` ability.
 
 {@inject: examples/trading/contracts/escrow/sources/lock.move#fun=test_lock_unlock noComments}
-```move
-#[test]
-fun test_lock_unlock() {
-    let ts = ts::begin(@0xA);
-    let coin = test_coin(&mut ts);
-
-    let (lock, key) = lock(coin, ts::ctx(&mut ts));
-    let coin = unlock(lock, key);
-
-    coin::burn_for_testing(coin);
-    ts::end(ts);
-}
-```
 
 The other test is testing a failure scenario – that an abort happens. It creates two locked objects (this time the values are just `u64`s), and use the key from one to try and unlock the other, which should fail (specified using the `expected_failure` attribute).
 
 Unlike the previous test, the same clean-up is not needed, because the code is expected to abort. Instead, add another abort after the code that you expect to abort (making sure to use a different code for this second abort).
 
 {@inject: examples/trading/contracts/escrow/sources/lock.move#fun=test_lock_key_mismatch noComments}
-
-```move
-#[test]
-#[expected_failure(abort_code = ELockKeyMismatch)]
-fun test_lock_key_mismatch() {
-    let ts = ts::begin(@0xA);
-    let (l, _k) = lock(42, ts::ctx(&mut ts));
-    let (_l, k) = lock(43, ts::ctx(&mut ts));
-
-    unlock(l, k);
-    abort 1337
-}
-```
 
 :::tip Additional resources
 
@@ -183,7 +105,7 @@ fun test_lock_key_mismatch() {
 
 :::
 
-### The `Escrow` protocol {#escrow}
+### The Escrow protocol {#escrow}
 
 Trading proceeds in three steps:
 
@@ -193,110 +115,28 @@ Trading proceeds in three steps:
 
 You can start by implementing steps two and three, by defining a new type to hold the escrowed object. It holds the `escrowed` object and an `id: UID` (because it's an object in its own right), but it also records the `sender` and intended `recipient` (to confirm they match when the trade happens), and it registers interest in the first party's object by recording the `ID` of the key that unlocks the `Locked<U>` that contains the object.
 
-{@inject: examples/trading/contracts/escrow/sources/owned.move#struct=Escrow noComments}
-```move
-use sui::object::{ID, UID};
-
-struct Escrow<T: key + store> has key, store {
-    id: UID,
-    sender: address,
-    recipient: address,
-    exchange_key: ID,
-    escrowed: T,
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#struct=Escrow noComments singleSpace}
 
 You also need to create a function for creating the `Escrow` object. The object is shared because it needs to be accessed by the address that created it (in case the object needs to be returned) and by the intended recipient (to complete the swap).
 
-{@inject: examples/trading/contracts/escrow/sources/owned.move#fun=create noComments}
-```move
-use sui::object;
-use sui::transfer;
-use sui::tx_context::{Self, TxContext};
-
-public fun create<T: key + store>(
-    escrowed: T,
-    exchange_key: ID,
-    recipient: address,
-    ctx: &mut TxContext
-) {
-    let escrow = Escrow {
-        id: object::new(ctx),
-        sender: tx_context::sender(ctx),
-        recipient,
-        exchange_key,
-        escrowed,
-    };
-
-    transfer::public_share_object(escrow);
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#fun=create noComments}
 
 If the second party stops responding, the first party can unlock their object. You need to create a function so the second party can recover their object in the symmetric case as well.
 
 - It needs to check that the caller matches `sender`, because `Escrow` objects are shared and anybody can access them.
 - It accepts the `Escrow` by value so that it can clean it up after extracting the `escrowed` object, reclaiming the storage rebate for the sender and cleaning up an unused object on chain.
 
-{@inject: examples/trading/contracts/escrow/sources/owned.move#fun=return_to_sender noComments}
-
-```move
-/// The `sender` and `recipient` of the two escrowed objects do not match
-const EMismatchedSenderRecipient: u64 = 0;
-
-public fun return_to_sender<T: key + store>(
-    escrow: Escrow<T>,
-    ctx: &TxContext
-): T {
-    let Escrow {
-        id,
-        sender,
-        recipient: _,
-        exchange_key: _,
-        escrowed,
-    } = escrow;
-
-    assert!(sender == tx_context::sender(ctx), EMismatchedSenderRecipient);
-    object::delete(id);
-    escrowed
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#fun=return_to_sender noComments}
 
 Finally, you need to add a function to allow the first party to complete the trade.
 
-- This function also accepts the `Escrow` by value because it will consume it once the swap is complete.
-- It checks that the sender of the transaction is the intended recipient (the first party), and that the ID of the key they provided matches the key specified when the object was escrowed. This is what ensures no tampering occurs, because this key can only be provided if it had not been used to unlock the object, which proves the object has not left its `Locked<U>` between the call to `create` and to `swap`, and you can tell by inspecting the `lock` module that it cannot be modified while in there.
+- This function also accepts the `Escrow` by value because it will consume it after the swap is complete.
+- It checks that the sender of the transaction is the intended recipient (the first party), and that the ID of the key that they provided matches the key specified when the object was escrowed. This ensures no tampering occurs, because this key can be provided only if it had not been used to unlock the object, which proves the object has not left its `Locked<U>` between the call to `create` and to `swap`. You can inspect the `lock` module to see that it cannot be modified while in there.
 - The call to `unlock` further checks that the key matches the locked object that was provided.
-- Instead of transferring the escrowed object to the recipient address, it is returned by the `swap` function. You can do this because you checked that the transaction sender is the recipient, and it makes this API more composable. Programmable Transaction Blocks give us the flexibility to decide whether to transfer the object as it is received or do something else with it.
+- Instead of transferring the escrowed object to the recipient address, it is returned by the `swap` function. You can do this because you checked that the transaction sender is the recipient, and it makes this API more composable. Programmable transaction blocks (PTBs) provide the flexibility to decide whether to transfer the object as it is received or do something else with it.
 
-{@inject: examples/trading/contracts/escrow/sources/owned.move#fun=swap noComments}
-
-```move
-/// The `exchange_for` fields of the two escrowed objects do not match
-const EMismatchedExchangeObject: u64 = 1;
-
-public fun swap<T: key + store, U: key + store>(
-    escrow: Escrow<T>,
-    key: Key,
-    locked: Locked<U>,
-    ctx: &TxContext,
-): T {
-    let Escrow {
-        id,
-        sender,
-        recipient,
-        exchange_key,
-        escrowed: escrowed1,
-    } = escrow;
-
-    assert!(recipient == tx_context::sender(ctx), EMismatchedSenderRecipient);
-    assert!(exchange_key == object::id(&key), EMismatchedExchangeObject);
-    let escrowed2 = lock::unlock(locked, key);
-
-    transfer::public_transfer(escrowed2, sender);
-    object::delete(id);
-    escrowed1
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#variable=EMismatchedSenderRecipient,EMismatchedExchangeObject singleSpace noComments}
+{@inject: examples/trading/contracts/escrow/sources/shared.move#fun=swap noComments noTitle}
 
 :::tip Additional resources
 
@@ -313,104 +153,31 @@ Tests for the `escrow` module will be more involved than for `lock` – you will
 
 You will focus on the test for a successful swap, but a link to all the tests can be found later on.
 
-As with the lock test, start by creating a function to mint a test coin. You also create some constants to represent our transaction senders, `ALICE` and `BOB`.
+As with the lock test, start by creating a function to mint a test coin. You also create some constants to represent our transaction senders, `ALICE`, `BOB`, and `DIANE`.
 
-{@inject: examples/trading/contracts/escrow/sources/lock.move#fun=test_coin noComments}
-
-```move
-#[test_only] use sui::coin::{Self, Coin};
-#[test_only] use sui::sui::SUI;
-#[test_only] use sui::test_scenario::{Self as ts, Scenario};
-
-#[test_only] const ALICE: address = @0xA;
-#[test_only] const BOB: address = @0xB;
-
-#[test_only]
-fun test_coin(ts: &mut Scenario): Coin<SUI> {
-    coin::mint_for_testing<SUI>(42, ts::ctx(ts))
-}
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#fun=test_coin noComments}
 
 The test body starts with a call to `test_scenario::begin` and ends with a call to `test_scenario::end`. It doesn't matter which address you pass to `begin`, because you will pick one of `ALICE` or `BOB` at the start of each new transaction you write, so set it to `@0x0`:
 
 {@inject: examples/trading/contracts/escrow/sources/shared.move#test}
-
-```move
-#[test]
-fun test_successful_swap() {
-    let ts = ts::begin(@0x0);
-
-    // Rest of the test ...
-
-    ts::end(ts);
-}
-```
 
 The first transaction is from `BOB` who creates a coin and locks it. You may remember the ID of the coin and the ID of the key, which you will need later, but now you transfer the locked object and the key itself to `BOB`, because this is what would happen with a real transaction: When simulating transactions in a test, you should only keep around primitive values, not whole objects, which would need to be written to chain between transactions.
 
 Write these transactions inside the `test_successful_swap` function, between the call to `begin` and `end`.
 
 {@inject: examples/trading/contracts/escrow/sources/shared.move#variable=i2 noComments}
-```move
-let (i2, ik2) = {
-    ts::next_tx(&mut ts, BOB);
-    let c = test_coin(&mut ts);
-    let cid = object::id(&c);
-    let (l, k) = lock::lock(c, ts::ctx(&mut ts));
-    let kid = object::id(&k);
-    transfer::public_transfer(l, BOB);
-    transfer::public_transfer(k, BOB);
-    (cid, kid)
-};
-```
 
 Next, `ALICE` comes along and sets up the `Escrow`, which locks their coin. They register their interest for `BOB'`s coin by referencing `BOB`'s key's ID (`ik2`):
 
 {@inject: examples/trading/contracts/escrow/sources/shared.move#variable=i1 noComments}
-```move
-let i1 = {
-    ts::next_tx(&mut ts, ALICE);
-    let c = test_coin(&mut ts);
-    let cid = object::id(&c);
-    create(c, ik2, BOB, ts::ctx(&mut ts));
-    cid
-};
-```
 
 Finally, `BOB` completes the trade by calling `swap`. The `take_shared` function is used to simulate accepting a shared input. It uses type inference to know that the object must be an `Escrow`, and finds the last object of this type that was shared (by `ALICE` in the previous transaction). Similarly, use `take_from_sender` to simulate accepting owned inputs (in this case, `BOB`'s lock and key). The coin returned by `swap` is transferred back to `BOB`, as if it was called as part of a PTB, followed by a transfer command.
 
-```move
-{
-    ts::next_tx(&mut ts, BOB);
-    let escrow = ts::take_shared(&ts);
-    let k2: Key = ts::take_from_sender(&ts);
-    let l2: Locked<Coin<SUI>> = ts::take_from_sender(&ts);
-    let c = swap<Coin<SUI>, Coin<SUI>>(
-        escrow,
-        k2,
-        l2,
-        ts::ctx(&mut ts),
-    );
-
-    transfer::public_transfer(c, BOB);
-};
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#bob noComments}
 
 The rest of the test is designed to check that `ALICE` has `BOB`'s coin and vice versa. It starts by calling `next_tx` to make sure the effects of the previous transaction have been committed, before running the necessary checks.
 
-```move
-ts::next_tx(&mut ts, @0x0);
-
-{
-    let c: Coin<SUI> = ts::take_from_address_by_id(&ts, ALICE, i2);
-    ts::return_to_address(ALICE, c);
-};
-
-{
-    let c: Coin<SUI> = ts::take_from_address_by_id(&ts, BOB, i1);
-    ts::return_to_address(BOB, c);
-};
-```
+{@inject: examples/trading/contracts/escrow/sources/shared.move#finish noComments}
 
 :::tip Additional resources
 
@@ -529,50 +296,9 @@ With the contract adapted to emit events, you can now write an indexer that keep
 
 {@inject: examples/trading/api/prisma/schema.prisma}
 
-```ts
-// prisma/schema.prisma
-generator client {
-  provider = "prisma-client-js"
-}
+The core of the indexer is an event loop, initialized in a function called `setupListeners`.
 
-datasource db {
-  provider = "sqlite"
-  url      = "file:./dev.db"
-}
-
-/// Our swap objects list
-model Escrow {
-  // Keeping an ID so we can use as a pagination cursor
-  // There's an issue with BigInt for sqlite, so we're using a plain ID.
-  id Int @id @default(autoincrement())
-  objectId String @unique
-  sender String?
-  recipient String?
-  keyId String?
-  itemId String?
-  swapped Boolean @default(false)
-  cancelled Boolean @default(false)
-
-  @@index([recipient])
-  @@index([sender])
-}
-
-/// Saves the latest cursor for a given key.
-model Cursor {
-  id String @id
-  eventSeq String
-  txDigest String
-}
-```
-
-The core of the indexer is an event loop, initialised in a function called `setupListeners`.
-
-```ts
-// indexer.ts
-import { setupListeners } from './indexer/event-indexer';
-
-setupListeners();
-```
+{@inject: examples/trading/api/indexer.ts}
 
 The indexer queries events related to the `escrow` module, using a `queryEvent` filter, and keeps track of a cursor representing the latest event it has processed so it can resume indexing from the right place even if it is restarted. The filter is looking for any events whose type is from the `escrow` module of our Move package:
 
@@ -620,139 +346,13 @@ export const setupListeners = async () => {
 };
 ```
 
-The core event job works by polling: It queries RPC for events following its latest cursor and sends them to a callback for processing. If it detects more than one page of new events, it will make an immediate subsequent request for the next page, otherwise it waits for the next polling interval before checking again:
+The core event job works by polling: It queries RPC for events following its latest cursor and sends them to a callback for processing. If it detects more than one page of new events, it immediately requests the next page. Otherwise, the job waits for the next polling interval before checking again:
 
-```ts
-// indexer/event-indexer.ts
-import { EventId, SuiClient } from '@mysten/sui.js/client';
+{@inject: examples/trading/api/indexer/event-indexer.ts}
 
-type SuiEventsCursor = EventId | null | undefined;
+The callback is responsible for reading the event and updating the database accordingly. For demo purposes, SQLite is being used, and so you need to issue a separate `UPSERT` to the database for each escrowed object. In a production setting, however, you would want to batch requests to the database to optimize data flow.
 
-const executeEventJob = async (
-  client: SuiClient,
-  tracker: EventTracker,
-  cursor: SuiEventsCursor,
-): Promise<EventExecutionResult> => {
-  try {
-    // get the events from the chain.
-    // For this implementation, we are going from start to finish.
-    // This will also allow filling in a database from scratch!
-    const { data, hasNextPage, nextCursor } = await client.queryEvents({
-      query: tracker.filter,
-      cursor,
-      order: 'ascending',
-    });
-
-    // handle the data transformations defined for each event
-    await tracker.callback(data, tracker.type);
-
-    // We only update the cursor if we fetched extra data (which means there was a change).
-    if (nextCursor && data.length > 0) {
-      await saveLatestCursor(tracker, nextCursor);
-
-      return {
-        cursor: nextCursor,
-        hasNextPage,
-      };
-    }
-  } catch (e) {
-    console.error(e);
-  }
-  // By default, we return the same cursor as passed in.
-  return {
-    cursor,
-    hasNextPage: false,
-  };
-};
-
-const runEventJob = async (client: SuiClient, tracker: EventTracker, cursor: SuiEventsCursor) => {
-  const result = await executeEventJob(client, tracker, cursor);
-
-  // Trigger a timeout. Depending on the result, we either wait 0ms or the polling interval.
-  setTimeout(
-    () => {
-      runEventJob(client, tracker, result.cursor);
-    },
-    result.hasNextPage ? 0 : CONFIG.POLLING_INTERVAL_MS,
-  );
-};
-```
-
-The callback that gets called is responsible for reading the event and updating the database accordingly. For demo purposes, SQLite is being used, and so you need to issue a separate `UPSERT` to the database for each escrowed object, but in a production setting, requests to the database should be batched to minimise round-trips to the database.
-
-```ts
-// indexer/escrow-handler.ts
-import { SuiEvent } from '@mysten/sui.js/client';
-import { Prisma } from '@prisma/client';
-
-import { prisma } from '../db';
-
-type EscrowEvent = EscrowCreated | EscrowCancelled | EscrowSwapped;
-
-type EscrowCreated = {
-  sender: string;
-  recipient: string;
-  escrow_id: string;
-  key_id: string;
-  item_id: string;
-};
-
-type EscrowSwapped = {
-  escrow_id: string;
-};
-
-type EscrowCancelled = {
-  escrow_id: string;
-};
-
-export const handleEscrowObjects = async (events: SuiEvent[], type: string) => {
-  const updates: Record<string, Prisma.EscrowCreateInput> = {};
-
-  for (const event of events) {
-    if (!event.type.startsWith(type)) throw new Error('Invalid event module origin');
-    const data = event.parsedJson as EscrowEvent;
-
-    if (!Object.hasOwn(updates, data.escrow_id)) {
-      updates[data.escrow_id] = {
-        objectId: data.escrow_id,
-      };
-    }
-
-    // Escrow cancellation case
-    if (event.type.endsWith('::EscrowCancelled')) {
-      const data = event.parsedJson as EscrowCancelled;
-      updates[data.escrow_id].cancelled = true;
-      continue;
-    }
-
-    // Escrow swap case
-    if (event.type.endsWith('::EscrowSwapped')) {
-      const data = event.parsedJson as EscrowSwapped;
-      updates[data.escrow_id].swapped = true;
-      continue;
-    }
-
-    const creationData = event.parsedJson as EscrowCreated;
-
-    // Handle creation event
-    updates[data.escrow_id].sender = creationData.sender;
-    updates[data.escrow_id].recipient = creationData.recipient;
-    updates[data.escrow_id].keyId = creationData.key_id;
-    updates[data.escrow_id].itemId = creationData.item_id;
-  }
-
-  const promises = Object.values(updates).map((update) =>
-    prisma.escrow.upsert({
-      where: {
-        objectId: update.objectId,
-      },
-      create: update,
-      update,
-    }),
-  );
-  await Promise.all(promises);
-};
-```
+{@inject: examples/trading/api/indexer/escrow-handler.ts}
 
 :::tip Additional resources
 
@@ -764,111 +364,24 @@ export const handleEscrowObjects = async (events: SuiEvent[], type: string) => {
 
 ### API service
 
-The data that is captured by our indexer can then be served over an API, so that a front-end can read it. You will now implement the API in TypeScript, to run on Node, using Express.
+The data that the indexer captures can then be served over an API, so that a frontend can read it. Follow the next section to implement the API in TypeScript, to run on Node, using Express.
 
-#### API design
-
-##### Query parameters
+#### Query parameters
 
 You want your API to accept the query string in the URL as the parameters for database `WHERE` query. Hence, you want a utility that can extract and parse the URL query string into valid query parameters for Prisma. With the `parseWhereStatement()` function, the callers filter the set of keys from the URL query string and transforms those corresponding key-value pairs into the correct format for Prisma.
 
-```ts title='utils/api-queries.ts'
-export enum WhereParamTypes {
-	STRING,
-	NUMBER,
-	BOOLEAN,
-}
+{@inject: examples/trading/api/utils/api-queries.ts#enum=WhereParamTypes}
+{@inject: examples/trading/api/utils/api-queries.ts#type=WhereParam noTitle}
+{@inject: examples/trading/api/utils/api-queries.ts#variable=parseWhereStatement noTitle}
 
-export type WhereParam = {
-	key: string;
-	type: WhereParamTypes;
-};
-
-/** Parses a where statement based on the query params. */
-export const parseWhereStatement = (query: Record<string, any>, acceptedParams: WhereParam[]) => {
-	const params: Record<string, any> = {};
-	for (const key of Object.keys(query)) {
-		const whereParam = acceptedParams.find((x) => x.key === key);
-		if (!whereParam) continue;
-
-		const value = query[key];
-		if (whereParam.type === WhereParamTypes.STRING) {
-			params[key] = value;
-		}
-		if (whereParam.type === WhereParamTypes.NUMBER) {
-			const number = Number(value);
-			if (isNaN(number)) throw new Error(`Invalid number for ${key}`);
-
-			params[key] = number;
-		}
-
-		// Handle boolean expected values.
-		if (whereParam.type === WhereParamTypes.BOOLEAN) {
-			let boolValue;
-			if (value === 'true') boolValue = true;
-			else if (value === 'false') boolValue = false;
-			else throw new Error(`Invalid boolean for ${key}`);
-
-			params[key] = boolValue;
-		}
-	}
-	return params;
-};
-```
-
-##### Query pagination
+#### Query pagination
 
 Pagination is another crucial part to ensure your API returns sufficient and/or ordered chunk of information instead of all the data that might be the vector for a DDOS attack. Similar to **WHERE parameters**, define a set of keys in the URL query string to be accepted as valid pagination parameters. The `parsePaginationForQuery()` utility function helps to achieve this by filtering the pre-determined keys `sort`, `limit`, `cursor` and parsing corresponding key-value pairs into `ApiPagination` that Prisma can consume.
 
 In this example, the `id` field of the model in the database as the cursor that allows clients to continue subsequent queries with the next page.
 
-```ts title='utils/api-queries.ts'
-export type ApiPagination = {
-	take?: number;
-	orderBy: {
-		id: 'asc' | 'desc';
-	};
-	cursor?: {
-		id: number;
-	};
-	skip?: number;
-};
-
-/**
- * A helper to prepare pagination based on `req.query`.
- * Only primary key cursor + ordering for this example.
- */
-export const parsePaginationForQuery = (body: Record<string, any>) => {
-	const pagination: ApiPagination = {
-		orderBy: {
-			id: Object.hasOwn(body, 'sort') && ['asc', 'desc'].includes(body.sort) ? body.sort : 'desc',
-		},
-	};
-
-	// Prepare pagination limit (how many items to return)
-	if (Object.hasOwn(body, 'limit')) {
-		const requestLimit = Number(body.limit);
-
-		if (isNaN(requestLimit)) throw new Error('Invalid limit value');
-
-		pagination.take = requestLimit > CONFIG.DEFAULT_LIMIT ? CONFIG.DEFAULT_LIMIT : requestLimit;
-	} else {
-		pagination.take = CONFIG.DEFAULT_LIMIT;
-	}
-
-	// Prepare cursor pagination (which page to return)
-	if (Object.hasOwn(body, 'cursor')) {
-		const cursor = Number(body.cursor);
-		if (isNaN(cursor)) throw new Error('Invalid cursor');
-		pagination.skip = 1;
-		pagination.cursor = {
-			id: cursor,
-		};
-	}
-
-	return pagination;
-};
-```
+{@inject: examples/trading/api/utils/api-queries.ts#type=ApiPagination}
+{@inject: examples/trading/api/utils/api-queries.ts#variable=parsePaginationForQuery noTitle}
 
 #### API endpoints
 
@@ -879,82 +392,7 @@ All the endpoints are defined in `server.ts`, particularly, there are two endpoi
 
 You define a list of valid query keys, such as `deleted`, `creator`, `keyId`, and `objectId` for `Locked` data and `cancelled`, `swapped`, `recipient`, and `sender` for `Escrow` data. Pass the URL query string into the pre-defined utilities to output the correct parameters that Prisma can use.
 
-```ts title='server.ts'
-import { prisma } from './db';
-import {
-	formatPaginatedResponse,
-	parsePaginationForQuery,
-	parseWhereStatement,
-	WhereParam,
-	WhereParamTypes,
-} from './utils/api-queries';
-
-app.get('/locked', async (req, res) => {
-	const acceptedQueries: WhereParam[] = [
-		{
-			key: 'deleted',
-			type: WhereParamTypes.BOOLEAN,
-		},
-		{
-			key: 'creator',
-			type: WhereParamTypes.STRING,
-		},
-		{
-			key: 'keyId',
-			type: WhereParamTypes.STRING,
-		},
-		{
-			key: 'objectId',
-			type: WhereParamTypes.STRING,
-		},
-	];
-
-	try {
-		const locked = await prisma.locked.findMany({
-			where: parseWhereStatement(req.query, acceptedQueries)!,
-			...parsePaginationForQuery(req.query),
-		});
-
-		return res.send(formatPaginatedResponse(locked));
-	} catch (e) {
-		console.error(e);
-		return res.status(400).send(e);
-	}
-});
-
-app.get('/escrows', async (req, res) => {
-	const acceptedQueries: WhereParam[] = [
-		{
-			key: 'cancelled',
-			type: WhereParamTypes.BOOLEAN,
-		},
-		{
-			key: 'swapped',
-			type: WhereParamTypes.BOOLEAN,
-		},
-		{
-			key: 'recipient',
-			type: WhereParamTypes.STRING,
-		},
-		{
-			key: 'sender',
-			type: WhereParamTypes.STRING,
-		},
-	];
-
-	try {
-		const escrows = await prisma.escrow.findMany({
-			where: parseWhereStatement(req.query, acceptedQueries)!,
-			...parsePaginationForQuery(req.query),
-		});
-
-		return res.send(formatPaginatedResponse(escrows));
-	} catch (e) {
-		console.error(e);
-		return res.status(400).send(e);
-	}
-});
-```
+{@inject: examples/trading/api/server.ts}
 
 ### Deployment {#deployment}
 
@@ -968,7 +406,7 @@ Now that you have an indexer and an API service, you can deploy your move packag
 
   <details>
     <summary>
-      Deployment instructions
+      Toggle deployment instructions
     </summary>
     {@include: ../../../snippets/initialize-sui-client-cli.mdx}
 
@@ -1039,7 +477,7 @@ With the code successfully deployed on Testnet, you can now [create a frontend](
 
 ## Frontend {#frontend}
 
-In this final part of the app example, you build a frontend (UI) that allows end-users to discover trades and interact with listed escrows.
+In this final part of the app example, you build a frontend (UI) that allows end users to discover trades and interact with listed escrows.
 
 ### Prerequisites
 
@@ -1054,7 +492,7 @@ Before getting started, make sure you have:
 
 :::tip Additional resources
 
-- Tooling: [Sui Typescript SDK](https://sdk.mystenlabs.com/typescript). For basic usage on how to interact with Sui with Typescript.
+- Tooling: [Sui Typescript SDK](https://sdk.mystenlabs.com/typescript). For basic usage on how to interact with Sui with TypeScript.
 - Tooling: [Sui dApp Kit](https://sdk.mystenlabs.com/dapp-kit). To learn basic building blocks for developing a dApp in the Sui ecosystem with React.js.
 - Tooling: [`@mysten/dapp`](https://sdk.mystenlabs.com/dapp-kit/create-dapp). This is used within this project to quickly scaffold a React-based Sui dApp.
 
@@ -2568,4 +2006,3 @@ Run your app and ensure you can:
 ### Finished frontend
 
 At this point, you have a fully functional frontend that allows users to discover trades and interact with listed escrows. The UI is designed to be user-friendly and intuitive, allowing users to easily navigate and interact with the application. Have fun exploring the app and testing out the different features!
-
